[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/godot-rollback-netcode/NetworkAnimationPlayer.gd" type="Script" id=1]
[ext_resource path="res://game/assets/sprites/VFX/RadicalCancel/Timeline 1_0005.png" type="Texture2D" id=2]
[ext_resource path="res://game/assets/sprites/VFX/RadicalCancel/Timeline 1_0003.png" type="Texture2D" id=4]
[ext_resource path="res://game/assets/sprites/VFX/RadicalCancel/Timeline 1_0001.png" type="Texture2D" id=5]
[ext_resource path="res://game/assets/sprites/VFX/RadicalCancel/Timeline 1_0002.png" type="Texture2D" id=6]
[ext_resource path="res://game/assets/sprites/VFX/RadicalCancel/Timeline 1_0004.png" type="Texture2D" id=7]
[ext_resource path="res://game/assets/sprites/VFX/RadicalCancel/Timeline 1_0000.png" type="Texture2D" id=8]
[ext_resource path="res://game/fighter/effects/VFX.gd" type="Script" id=9]
[ext_resource path="res://addons/godot-rollback-netcode/NetworkTimer.gd" type="Script" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Hit"
length = 0.366667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.0666667, 0.1, 0.133333, 0.166667, 0.233333 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 2 ) ]
}

[node name="Hit" type="SGFixedNode2D"]
z_index = -15
script = ExtResource( 9 )

[node name="NetworkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 1 )
script = ExtResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2( 0, -117 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="NetworkTimer" type="Node" parent="."]
script = ExtResource( 10 )
wait_ticks = 22

[connection signal="timeout" from="NetworkTimer" to="." method="_on_NetworkTimer_timeout"]
